# physicell-hands-on

./: .gitignore  .gitmodules  README.md  mcp-reqs.txt
diffusion/: PhysiCell_settings_1.xml  PhysiCell_settings_2.xml  main_bulk_sources_and_sinks.cpp
mechanics/: PhysiCell_settings_1.xml  PhysiCell_settings_2.xml  PhysiCell_settings_3.xml
physicore-example/: CMakeLists.txt  main.cpp  settings.xml
